2.4.22
- Gateway to Eternity config support
- Allow banning mob spawn that is lower than certain level
- Performance improvement

2.4.21
- Add armor spawn config datapack
- Add config for trident spawn on drowned
- Add config for spawner spawned hostility loot drop rate
- Improve client side performance
- Attempt to fix a rare unreproducible crash

2.4.20
- Allow mobs with Arena to attack other mobs with Arena
- Make additional player difficulty an attribute

2.4.19
- Make Reflect trait reflect only forge:direct damage
- Make Arena not blocked by reflection ring and abrahadabra
- Make Shulker only shoot bullet after first one disappears
- Make Hostility Spawner can only spawn mobs with level
- Add Abyssal Thorn, Divine Cross, and Divine Light
- Allow visualization of cleared levels
- Allow mob-specific level config to add condition and chance to traits
- Limit Teleport trait active teleport distance
- Change Level Difficulty from using DimensionType ID to Level ID

2.4.18
- Reduce reprint scaling by half
- Tweak drop recipes
- Killer arua mobs can now hurt non-player target
- Fix pandora tooltip
- Arena - Void Touch priority fix

2.4.17
- Add charms for drops
- Add config to allow player summoned entities to have levels and traits
- Make constantly refreshing effects ambient
- Add death tome to blacklist
- Fix Antibuild effect icon
- Fix reflect trait tooltip

2.4.16
- Add more advancements
- Fix Curse of Pride text
- Nameplate render offset
- Fix EnigmaticLegacy compat

2.4.15
- Fix hostility orb not added to player inventory when inventory is full
- Double Curse of Gluttony default drop rate
- Half Hostility essence cost
- Change recipes

2.4.14
- Add event to teleport
- Growth trait slimes won't suffocate
- Fix Rank 0 trait
- Add config to disable entity specific data
- Add Arena effect icon
- Add Ice and Fire dragon default traits
- Add Ars Nouveau enchantment recipe

2.4.13
- Fix more textures
- Fix Drain crash
- Sealed item can still put on curios slot