@@ -1,7 +1,10 @@
 2.4.22
+- Hostility Beacon
+- Mutant Monster compat
+- GeckoLib invisiblity glowing fix
 - Gateway to Eternity config support
 - Allow banning mob spawn that is lower than certain level
-- Performance improvement
+- minor performance improvement
 
 2.4.21
 - Add armor spawn config datapack
